--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,12 @@
 			<artifactId>font-awesome</artifactId>
 			<version>4.5.0</version>
 		</dependency>		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>webjars-locator</artifactId>
+		    <version>0.32-1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
